# grv

./: .gitignore  CMakeLists.txt  bld.c  build.lua  grvbld.h  ld.txt  plan.txt
.todo/: c5779e543af541bd.todo  cepocecapaqekesa.todo  giminagejefoqiji.todo  kusahomutunepobo.todo  peteliferepanoru.todo  tifupumofiqifiji.todo
apps/: grv_clock.c  grv_color_palette.c  todo.c
include/: grv.h  grv_defines.h  grv_fs.h  grv_result_type.h  grv_str.h  grv_strmap.h  grv_test.h  grv_util.h
include/grv/: common.h  fs.h  fx32.h  grv.h  grv_arena.h  grv_arr.h  grv_base.h  grv_blob.h  grv_common.h  grv_cstr.h  log.h  (+31 more)
lua/: build.lua  grvbld.lua
misc/: create_sin_cos_lut.c  grvbld_test.c  test_calloc.c  test_uid.c
src/: bld.c  build.c  grv.c  grv_arena.c  grv_arr.c  grv_blob.c  grv_common.c  grv_cstr.c  grv_dynarr.c  grv_error.c  grv_fs.c  grv_hash.c  grv_log.c  grv_math.c  grv_math_sin_cos_lut.c  grv_memory.c  grv_path.c  grv_pseudo_random.c  grv_ringbuffer.c  grv_serialize.c  grv_str.c  grv_str_format.c  grv_strarr.c  grv_strmap.c  grv_term.c  grv_util.c  grvbld.c  log.c  vec2_f64.c  vec2f.c  vec2i.c
test/: grv_cstr_append.c  grv_cstr_len.c  grv_join_path.c  grv_split_path.c  grv_str_format.c  grv_str_is_float.c  grv_str_split_head_at_char.c  grv_str_split_tail_from_front.c  grv_str_split_whitespace.c  grv_str_to_f32.c  grv_str_to_snake_case.c  grv_strarr_any_contains.c  grv_strarr_index_of_str.c  test_grv_common.c  test_grv_cstr.c  test_grv_fs.c  test_grv_str.c  test_grv_strarr.c  test_grv_strmap.c  test_grv_util.c  test_grv_vec2f.c  test_test.c
tools/: grvcc.c  new_test.c
(+65 files in other folders)
